--- a/Alcolist/war/Alcolist.html
+++ b/Alcolist/war/Alcolist.html
@@ -16,7 +16,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Alcolist</title>
+    <title>The Alcolist</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -44,7 +44,7 @@
       </div>
     </noscript>
 
-    <h1>Alcolist</h1>
+    <h1>The Alcolist</h1>
 
     <table align="center">
       <tr>
