Basic UI created - needs alot of refactoring

--- a/Alcolist/war/Alcolist.html
+++ b/Alcolist/war/Alcolist.html
@@ -44,15 +44,15 @@
       </div>
     </noscript>
 
-    <h1>The Alcolist</h1>
+<!--     <h1>The Alcolist</h1> -->
 
-    <table align="center">
+<!--     <table align="center">
       <tr>
         <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
       </tr>
       <tr>
         <td id="baseContainer"></td>
       </tr>
-    </table>
+    </table> -->
   </body>
 </html>
